--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Application Form</title>
 </head>
 <body>
     <div><h1>Employment Application Form Example </h1>
@@ -77,6 +77,11 @@
                 </tr>
                 <tr>
                     <td colspan="2"><textarea name="" id="" cols="50" rows="10"></textarea></td>
+                </tr>
+                <tr>
+                    <td align="center" colspan="2">
+                        <input type="button" value="Send Application">
+                    </td>
                 </tr>
 
             </table>
